# BI-AGENT

./: .dockerignore  .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  migration.sql  pyproject.toml  smart-bi-agent.code-workspace  smoke-test.sh  verify-fixes.sh
.github/workflows/: ci.yml
backend/: alembic.ini  pytest.ini
backend/alembic/: env.py
backend/alembic/versions/: 20260313_0001_3d18d54d005c_initial_schema.py
backend/app/: config.py  dependencies.py  main.py
backend/app/api/v1/: __init__.py  routes_alerts.py  routes_audit.py  routes_auth.py  routes_connections.py  routes_conversations.py  routes_dashboards.py  routes_embed.py  (+13 more)
backend/app/db/: bigquery_executor.py  executor_factory.py  mysql_executor.py  query_executor.py  redis_manager.py  session.py
backend/app/errors/: __init__.py  exceptions.py  handlers.py
backend/app/llm/: __init__.py  base.py  factory.py  groq_provider.py
backend/app/logging/: __init__.py  audit.py  structured.py
backend/app/middleware/: __init__.py  content_type.py  metrics.py  rate_limiter.py  request_id.py  request_logging.py  security_headers.py
backend/app/models/: __init__.py  audit_log.py  base.py  connection.py  conversation.py  llm_provider.py  notification_platform.py  permission.py  saved_query.py  schedule.py  settings.py  token_usage.py  user.py
backend/app/notifications/: __init__.py  base.py  dispatcher.py  email_provider.py  slack_provider.py  teams_provider.py
backend/app/scheduler/: worker.py
backend/app/schemas/: auth.py  connection.py  conversation.py  export.py  integration.py  llm_provider.py  notification.py  permission.py  saved_query.py  schedule.py  schema.py  settings.py  user.py
backend/app/security/: auth.py  dns_pinner.py  key_manager.py  lockout.py  output_sanitizer.py  password.py  prompt_guard.py  sanitizer.py  ssrf_guard.py  token_budget.py  totp.py
backend/app/services/: schema_reader.py  sql_validator.py  suggestion_generator.py
backend/scripts/: create_admin.py  entrypoint.sh  verify_setup.py
backend/tests/: conftest.py  test_app_layer.py  test_component10.py  test_component5.py  test_component6.py  test_component7.py  test_component8.py  test_component9.py  test_core.py  test_db_layer.py  test_key_manager.py  test_query_executor.py  test_routes_auth.py  test_routes_management.py  test_security_core.py  test_sql_validator.py
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/__tests__/: anomaly-detection.test.ts  api.test.ts  security.test.ts  setup.ts
frontend/src/components/: AppShell.tsx  ChartStudio.tsx  CommandPalette.tsx  DrillDownModal.tsx  ERDDiagram.tsx  NLFilterBar.tsx  QueryResults.tsx  SkeletonChart.tsx
frontend/src/contexts/: sidebar.ts
frontend/src/lib/: animations.ts  anomaly-detection.ts  api.ts  security.ts  utils.ts
frontend/src/pages/: AdminPage.tsx  AlertsPage.tsx  ConnectionFormPage.tsx  ConnectionsPage.tsx  DashboardPage.tsx  LLMProviderFormPage.tsx  LLMProvidersPage.tsx  LoginPage.tsx  MonitoringPage.tsx  NotificationsPage.tsx  PermissionsPage.tsx  ProfilePage.tsx  QueryPage.tsx  RegisterPage.tsx  SavedQueriesPage.tsx  SchedulesPage.tsx  SchemaPage.tsx  StudioPage.tsx  TOTPSetupPage.tsx  TOTPVerifyPage.tsx
frontend/src/stores/: auth-store.ts  theme-store.ts
frontend/src/types/: auth.ts  connections.ts  llm-providers.ts  notifications.ts  permissions.ts  query.ts  saved-queries.ts  schedules.ts  schema.ts  users.ts
nginx/: nginx.conf
pgbouncer/: pgbouncer.ini
scripts/: generate_keys.sh  setup.sh
(+27 files in other folders)
